--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -37,11 +37,11 @@
 }
 
 .contact--mail::before {
-  background: url("/img/svg/icon/email.svg");
+  background: url("../img/svg/icon/email.svg");
 }
 
 .contact--phone::before {
-  background: url("/img/svg/icon/phone.svg");
+  background: url("../img/svg/icon/phone.svg");
 }
 
 .contact__label {
