--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -263,7 +263,7 @@
   left: 3px;
   width: 15px;
   height: 15px;
-  background-image: url("/img/svg/icon/check-mark.svg");
+  background-image: url("../img/svg/icon/check-mark.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
