--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,4 +1,4 @@
-.btn {
+.button {
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 700;
   font-size: 14px;
@@ -43,4 +43,9 @@
   @include vp-767 {
     display: none;
   }
+}
+
+.consult-button:hover,
+.consult-button:focus {
+  background-color: $pacific-blue;
 }
