--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,5 @@
 .catalog {
-  padding-top: 70px;
+  padding-top: 65px;
   padding-bottom: 140px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
   background-color: $color-tory-blue;
@@ -16,13 +16,13 @@
   }
 }
 
-.catalog h2 {
+.catalog__header {
   font-size: 36px;
   line-height: 51px;
   font-weight: 400;
   margin: 0;
   padding: 0;
-  margin-bottom: 50px;
+  margin-bottom: 54px;
 
   @include vp-1023 {
     margin-bottom: 37px;
@@ -32,6 +32,18 @@
     font-size: 28px;
     line-height: 39px;
     margin-bottom: 30px;
+  }
+
+  &::before {
+    @include vp-767 {
+      content: attr(header-mobile-caption);
+    }
+  }
+}
+
+.catalog__header--label {
+  @include vp-767 {
+    display: none;
   }
 }
 
@@ -56,21 +68,6 @@
   min-height: 650px;
   font-size: 14px;
   line-height: 19px;
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    bottom: 0;
-    right: 0;
-    background-color: $deep-sky-blue;
-    background-image: url("/img/svg/icon/arrow.svg");
-    background-repeat: no-repeat;
-    background-position: 56% 50%;
-    background-size: 20px 8px;
-    z-index: 1;
-  }
 
   @include vp-1023 {
     max-width: none;
@@ -97,17 +94,37 @@
   pointer-events: auto;
   content: "";
   background-color: rgba(214, 37, 37, 0);
-}
 
-.catalog__item a::before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(4, 24, 39, 0.5);
+  &::after {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    bottom: 0;
+    right: 0;
+    background-color: $deep-sky-blue;
+    background-image: url("../img/svg/icon/arrow.svg");
+    background-repeat: no-repeat;
+    background-position: 56% 50%;
+    background-size: 20px 8px;
+    z-index: 1;
+
+    @include vp-767 {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(4, 24, 39, 0.5);
+  }
 }
 
 .catalog__cards {
@@ -140,7 +157,7 @@
   line-height: 30px;
   position: absolute;
   top: 48px;
-  left: 42px;
+  left: 40px;
   width: 50%;
 
   @include vp-1023 {
@@ -160,4 +177,9 @@
 
 .catalog__item:hover {
   transform: scale(1.05);
+}
+
+.catalog__item:hover a::after {
+  width: 100%;
+  transition-duration: 0.5s;
 }
