--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -19,7 +19,7 @@
   display: flex;
   max-width: 1310px;
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 0 45px;
   gap: 160px;
 
   @include vp-1023 {
@@ -69,7 +69,9 @@
   }
 
   @include vp-767 {
-    padding-top: 11px;
+    padding: 0;
+    margin-left: -8px;
+    padding-top: 19px;
   }
 }
 
@@ -98,6 +100,7 @@
   @include vp-767 {
     flex-direction: column;
     gap: 0;
+    padding-top: 22px;
   }
 }
 
@@ -176,7 +179,7 @@
   list-style: none;
   column-count: 2;
   column-width: 220px;
-  column-gap: 30px;
+  column-gap: 19px;
 
   @include vp-1023 {
     grid-template-columns: 220px;
@@ -236,8 +239,8 @@
     &::after {
       content: "";
       position: absolute;
-      top: 27px;
-      right: 26px;
+      top: 26px;
+      right: 27px;
       width: 15px;
       height: 1px;
       background-color: $silver;
@@ -283,6 +286,7 @@
   @include vp-767 {
     padding-bottom: 6px;
     display: none;
+    margin-top: -7px;
   }
 }
 
