--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,7 +1,7 @@
 .questions {
-  padding-top: 164px;
+  padding-top: 165px;
   padding-bottom: 229px;
-  padding-left: 26px;
+  padding-left: 29px;
   color: $color-default-white;
   background: $form-bg;
 
@@ -15,7 +15,7 @@
 
   @include vp-767 {
     padding-top: 48px;
-    padding-bottom: 52px;
+    padding-bottom: 70px;
   }
 }
 
@@ -45,7 +45,7 @@
   width: 510px;
   height: 285px;
   top: 18%;
-  left: 15.7%;
+  left: 18.7%;
   transform: translateX(-40%);
   position: absolute;
   background-repeat: no-repeat;
@@ -115,6 +115,7 @@
 
   @include vp-767 {
     width: 100%;
+    padding: 0;
   }
 }
 
@@ -127,6 +128,10 @@
   font-size: 16px;
   line-height: 22px;
   width: 100%;
+
+  @include vp-767 {
+    padding: 14px 15px;
+  }
 }
 
 .form textarea {
@@ -191,7 +196,7 @@
   @include vp-767 {
     margin-right: 0;
     width: 100%;
-    margin-bottom: 16px;
+    margin-bottom: 20px;
   }
 }
 
@@ -216,7 +221,8 @@
   }
 
   @include vp-767 {
-    padding-top: 7px;
+    padding-top: 8px;
+    padding-left: 5px;
   }
 }
 
@@ -266,6 +272,10 @@
   background-image: url("../img/svg/icon/check-mark.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+
+  @include vp-767 {
+    top: 11px;
+  }
 }
 
 .form__agreement-inner input:hover + label::before,
