--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,4 +1,5 @@
-.logo {
+.logo,
+.page-footer__logo {
   content: "";
   display: block;
   grid-area: logo;
@@ -6,11 +7,20 @@
   height: 55px;
   background: url("../img/logo.svg");
   background-size: 100%;
+}
 
+.logo {
   @include vp-767 {
     background: url("../img/logo-mobile.svg");
     width: 35px;
     height: 35px;
+    background-size: 100%;
+  }
+}
+
+.page-footer__logo {
+  @include vp-767 {
+    background: url("../img/logo.svg");
     background-size: 100%;
   }
 }
