--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/catalog.scss";
 @import "blocks/form.scss";
 @import "blocks/footer.scss";
+@import "blocks/modal.scss";
 
 // ---------------------------------
 
