--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -24,7 +24,7 @@
 
   @include vp-1023 {
     max-width: 770px;
-    gap: 35px;
+    gap: 38px;
     flex-direction: column;
   }
 
@@ -46,7 +46,7 @@
   @include vp-767 {
     flex-direction: column;
     align-items: center;
-    padding-left: 25px;
+    padding-left: 22px;
     padding-right: 25px;
   }
 }
@@ -62,15 +62,16 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 25px;
+  max-width: 210px;
 
   @include vp-1023 {
     margin: 0;
-    margin-right: -14px;
+    padding-top: 6px;
   }
 
   @include vp-767 {
     padding: 0;
-    margin-left: -8px;
+    margin-left: 7px;
     padding-top: 19px;
   }
 }
@@ -108,7 +109,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 22px;
+  max-width: 470px;
 
   @include vp-1023 {
     max-width: 220px;
@@ -179,7 +181,7 @@
   list-style: none;
   column-count: 2;
   column-width: 220px;
-  column-gap: 19px;
+  column-gap: 28px;
 
   @include vp-1023 {
     grid-template-columns: 220px;
@@ -228,7 +230,7 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  gap: 20px;
+  gap: 22px;
 
   @include vp-767 {
     gap: 0;
