--- a/source/sass/blocks/top-line.scss
+++ b/source/sass/blocks/top-line.scss
@@ -4,15 +4,15 @@
   left: 0;
   top: 0;
   width: 100vw;
-  height: 120px;
+  min-height: 120px;
   background: $header-gradient;
 
   @include vp-1023 {
-    height: 100px;
+    min-height: 100px;
   }
 
   @include vp-767 {
-    height: 70px;
+    min-height: 70px;
   }
 }
 
@@ -44,28 +44,36 @@
 
 .top-line__contact {
   display: flex;
-  min-width: 480px;
+  width: 465px;
+  margin: 0 20px 0;
   justify-content: space-between;
   grid-area: contact;
   justify-self: center;
+  flex-wrap: wrap;
+  padding-bottom: 30px;
 
   @include vp-1023 {
+    width: 300px;
     justify-content: end;
     justify-self: end;
     gap: 40px;
+    padding: 0 0 30px;
+    margin: 0;
     margin-top: 10px;
   }
 
   @include vp-767 {
-    min-width: 167px;
+    width: 167px;
     gap: 39px;
-    margin-top: 5px;
+    padding: 0 0 20px;
+    margin: 0;
+    margin-top: 6px;
   }
 }
 
 .top-line__button {
   margin-top: 5px;
-  padding: 0 15px;
+  padding: 5px 15px;
   height: 40px;
   line-height: 16px;
   font-size: 14px;
@@ -79,6 +87,7 @@
   border-radius: 3px;
   cursor: pointer;
   grid-area: button;
+  overflow: hidden;
 
   @include vp-1023 {
     display: none;
